parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    comentario_multilinea
    comentario_unilinea
    corchete_abre
    corchete_cierra
    dos_puntos
    punto
    reservada_fin
    reservada_inicio

Grammar

Rule 0     S' -> S0
Rule 1     S0 -> INITIAL
Rule 2     INITIAL -> INITIAL ESTRUCTURA
Rule 3     INITIAL -> ESTRUCTURA
Rule 4     ESTRUCTURA -> PRODIF_ELSE
Rule 5     ESTRUCTURA -> PRODIF
Rule 6     ESTRUCTURA -> PRODDO_WHILE
Rule 7     ESTRUCTURA -> PRODWHILE
Rule 8     ESTRUCTURA -> PRODVOID
Rule 9     ESTRUCTURA -> PRODFUNCION
Rule 10    ESTRUCTURA -> DECLARACION
Rule 11    ESTRUCTURA -> LLAMADA
Rule 12    ESTRUCTURA -> ASINGACION
Rule 13    ESTRUCTURA -> RETURN
Rule 14    ESTRUCTURA -> BREAK
Rule 15    ESTRUCTURA -> CONTINUE
Rule 16    PRODDO_WHILE -> reservada_do INSTRUCCIONES_FACTORIZADO reservada_while OPERACION_FACTORIZADO punto_coma
Rule 17    PRODWHILE -> reservada_while OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
Rule 18    PRODIF_ELSE -> reservada_if OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO reservada_else INSTRUCCIONES_FACTORIZADO
Rule 19    PRODIF -> reservada_if OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
Rule 20    PRODVOID -> reservada_void id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
Rule 21    PRODFUNCION -> TIPO_DATO id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
Rule 22    OPERACIONES -> OPERACIONES OPERACION
Rule 23    OPERACIONES -> OPERACION
Rule 24    OPERACION -> OPERACION operador_suma OPERACION
Rule 25    OPERACION -> OPERACION operador_resta OPERACION
Rule 26    OPERACION -> OPERACION operador_multiplicacion OPERACION
Rule 27    OPERACION -> OPERACION operador_divicion OPERACION
Rule 28    OPERACION -> OPERACION operador_resto OPERACION
Rule 29    OPERACION -> OPERACION operador_igualacion OPERACION
Rule 30    OPERACION -> OPERACION operador_diferenciacion OPERACION
Rule 31    OPERACION -> OPERACION operador_mayor OPERACION
Rule 32    OPERACION -> OPERACION operador_mayor_igual OPERACION
Rule 33    OPERACION -> OPERACION operador_menor OPERACION
Rule 34    OPERACION -> OPERACION operador_menor_igual OPERACION
Rule 35    OPERACION -> OPERACION operador_AND OPERACION
Rule 36    OPERACION -> OPERACION operador_OR OPERACION
Rule 37    OPERACION -> OPERACION operador_NOT OPERACION
Rule 38    OPERACION -> OPERACION operador_igual OPERACION
Rule 39    OPERACION -> numero
Rule 40    INSTRUCCIONES -> DECLARACION
Rule 41    INSTRUCCIONES -> ASINGACION
Rule 42    INSTRUCCIONES -> PRODIF_ELSE
Rule 43    INSTRUCCIONES -> PRODIF
Rule 44    INSTRUCCIONES -> PRODDO_WHILE
Rule 45    INSTRUCCIONES -> PRODWHILE
Rule 46    INSTRUCCIONES -> PRODVOID
Rule 47    INSTRUCCIONES -> RETURN
Rule 48    INSTRUCCIONES -> BREAK
Rule 49    INSTRUCCIONES -> CONTINUE
Rule 50    INSTRUCCIONES -> LLAMADA
Rule 51    DECLARACION -> TIPO_DATO id operador_igual DATO punto_coma
Rule 52    ASINGACION -> id operador_igual DATO punto_coma
Rule 53    TIPO_DATO -> tipo_int
Rule 54    TIPO_DATO -> tipo_double
Rule 55    TIPO_DATO -> tipo_string
Rule 56    TIPO_DATO -> tipo_char
Rule 57    TIPO_DATO -> tipo_boolean
Rule 58    DATO -> numero
Rule 59    DATO -> dato_double
Rule 60    DATO -> dato_string
Rule 61    DATO -> dato_char
Rule 62    DATO -> dato_boolean_true
Rule 63    DATO -> dato_boolean_false
Rule 64    PARAMETRO -> TIPO_DATO id
Rule 65    PARAMETROS -> PARAMETROS coma PARAMETRO
Rule 66    PARAMETROS -> PARAMETRO
Rule 67    PARAMETROS -> <empty>
Rule 68    LLAMADA -> id parentesis_abre ARGUMENTOS parentesis_cierra
Rule 69    ARGUMENTOS -> ARGUMENTOS coma ARGUMENTO
Rule 70    ARGUMENTOS -> ARGUMENTO
Rule 71    ARGUMENTOS -> <empty>
Rule 72    ARGUMENTO -> DATO
Rule 73    RETURN -> reservada_return punto_coma
Rule 74    RETURN -> reservada_return DATO punto_coma
Rule 75    BREAK -> reservada_break punto_coma
Rule 76    CONTINUE -> reservada_continue punto_coma
Rule 77    OPERACION_FACTORIZADO -> parentesis_abre OPERACIONES parentesis_cierra
Rule 78    INSTRUCCIONES_FACTORIZADO -> llave_abre INSTRUCCIONES llave_cierra
Rule 79    PARAMETROS_FACTORIZADO -> parentesis_abre PARAMETROS parentesis_cierra

Terminals, with rules where they appear

coma                 : 65 69
comentario_multilinea : 
comentario_unilinea  : 
corchete_abre        : 
corchete_cierra      : 
dato_boolean_false   : 63
dato_boolean_true    : 62
dato_char            : 61
dato_double          : 59
dato_string          : 60
dos_puntos           : 
error                : 
id                   : 20 21 51 52 64 68
llave_abre           : 78
llave_cierra         : 78
numero               : 39 58
operador_AND         : 35
operador_NOT         : 37
operador_OR          : 36
operador_diferenciacion : 30
operador_divicion    : 27
operador_igual       : 38 51 52
operador_igualacion  : 29
operador_mayor       : 31
operador_mayor_igual : 32
operador_menor       : 33
operador_menor_igual : 34
operador_multiplicacion : 26
operador_resta       : 25
operador_resto       : 28
operador_suma        : 24
parentesis_abre      : 68 77 79
parentesis_cierra    : 68 77 79
punto                : 
punto_coma           : 16 51 52 73 74 75 76
reservada_break      : 75
reservada_continue   : 76
reservada_do         : 16
reservada_else       : 18
reservada_fin        : 
reservada_if         : 18 19
reservada_inicio     : 
reservada_return     : 73 74
reservada_void       : 20
reservada_while      : 16 17
tipo_boolean         : 57
tipo_char            : 56
tipo_double          : 54
tipo_int             : 53
tipo_string          : 55

Nonterminals, with rules where they appear

ARGUMENTO            : 69 70
ARGUMENTOS           : 68 69
ASINGACION           : 12 41
BREAK                : 14 48
CONTINUE             : 15 49
DATO                 : 51 52 72 74
DECLARACION          : 10 40
ESTRUCTURA           : 2 3
INITIAL              : 1 2
INSTRUCCIONES        : 78
INSTRUCCIONES_FACTORIZADO : 16 17 18 18 19 20 21
LLAMADA              : 11 50
OPERACION            : 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38
OPERACIONES          : 22 77
OPERACION_FACTORIZADO : 16 17 18 19
PARAMETRO            : 65 66
PARAMETROS           : 65 79
PARAMETROS_FACTORIZADO : 20 21
PRODDO_WHILE         : 6 44
PRODFUNCION          : 9
PRODIF               : 5 43
PRODIF_ELSE          : 4 42
PRODVOID             : 8 46
PRODWHILE            : 7 45
RETURN               : 13 47
S0                   : 0
TIPO_DATO            : 21 51 64

Parsing method: LALR

state 0

    (0) S' -> . S0
    (1) S0 -> . INITIAL
    (2) INITIAL -> . INITIAL ESTRUCTURA
    (3) INITIAL -> . ESTRUCTURA
    (4) ESTRUCTURA -> . PRODIF_ELSE
    (5) ESTRUCTURA -> . PRODIF
    (6) ESTRUCTURA -> . PRODDO_WHILE
    (7) ESTRUCTURA -> . PRODWHILE
    (8) ESTRUCTURA -> . PRODVOID
    (9) ESTRUCTURA -> . PRODFUNCION
    (10) ESTRUCTURA -> . DECLARACION
    (11) ESTRUCTURA -> . LLAMADA
    (12) ESTRUCTURA -> . ASINGACION
    (13) ESTRUCTURA -> . RETURN
    (14) ESTRUCTURA -> . BREAK
    (15) ESTRUCTURA -> . CONTINUE
    (18) PRODIF_ELSE -> . reservada_if OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO reservada_else INSTRUCCIONES_FACTORIZADO
    (19) PRODIF -> . reservada_if OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (16) PRODDO_WHILE -> . reservada_do INSTRUCCIONES_FACTORIZADO reservada_while OPERACION_FACTORIZADO punto_coma
    (17) PRODWHILE -> . reservada_while OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (20) PRODVOID -> . reservada_void id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (21) PRODFUNCION -> . TIPO_DATO id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (51) DECLARACION -> . TIPO_DATO id operador_igual DATO punto_coma
    (68) LLAMADA -> . id parentesis_abre ARGUMENTOS parentesis_cierra
    (52) ASINGACION -> . id operador_igual DATO punto_coma
    (73) RETURN -> . reservada_return punto_coma
    (74) RETURN -> . reservada_return DATO punto_coma
    (75) BREAK -> . reservada_break punto_coma
    (76) CONTINUE -> . reservada_continue punto_coma
    (53) TIPO_DATO -> . tipo_int
    (54) TIPO_DATO -> . tipo_double
    (55) TIPO_DATO -> . tipo_string
    (56) TIPO_DATO -> . tipo_char
    (57) TIPO_DATO -> . tipo_boolean

    reservada_if    shift and go to state 16
    reservada_do    shift and go to state 17
    reservada_while shift and go to state 18
    reservada_void  shift and go to state 19
    id              shift and go to state 20
    reservada_return shift and go to state 22
    reservada_break shift and go to state 23
    reservada_continue shift and go to state 24
    tipo_int        shift and go to state 25
    tipo_double     shift and go to state 26
    tipo_string     shift and go to state 27
    tipo_char       shift and go to state 28
    tipo_boolean    shift and go to state 29

    S0                             shift and go to state 1
    INITIAL                        shift and go to state 2
    ESTRUCTURA                     shift and go to state 3
    PRODIF_ELSE                    shift and go to state 4
    PRODIF                         shift and go to state 5
    PRODDO_WHILE                   shift and go to state 6
    PRODWHILE                      shift and go to state 7
    PRODVOID                       shift and go to state 8
    PRODFUNCION                    shift and go to state 9
    DECLARACION                    shift and go to state 10
    LLAMADA                        shift and go to state 11
    ASINGACION                     shift and go to state 12
    RETURN                         shift and go to state 13
    BREAK                          shift and go to state 14
    CONTINUE                       shift and go to state 15
    TIPO_DATO                      shift and go to state 21

state 1

    (0) S' -> S0 .



state 2

    (1) S0 -> INITIAL .
    (2) INITIAL -> INITIAL . ESTRUCTURA
    (4) ESTRUCTURA -> . PRODIF_ELSE
    (5) ESTRUCTURA -> . PRODIF
    (6) ESTRUCTURA -> . PRODDO_WHILE
    (7) ESTRUCTURA -> . PRODWHILE
    (8) ESTRUCTURA -> . PRODVOID
    (9) ESTRUCTURA -> . PRODFUNCION
    (10) ESTRUCTURA -> . DECLARACION
    (11) ESTRUCTURA -> . LLAMADA
    (12) ESTRUCTURA -> . ASINGACION
    (13) ESTRUCTURA -> . RETURN
    (14) ESTRUCTURA -> . BREAK
    (15) ESTRUCTURA -> . CONTINUE
    (18) PRODIF_ELSE -> . reservada_if OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO reservada_else INSTRUCCIONES_FACTORIZADO
    (19) PRODIF -> . reservada_if OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (16) PRODDO_WHILE -> . reservada_do INSTRUCCIONES_FACTORIZADO reservada_while OPERACION_FACTORIZADO punto_coma
    (17) PRODWHILE -> . reservada_while OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (20) PRODVOID -> . reservada_void id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (21) PRODFUNCION -> . TIPO_DATO id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (51) DECLARACION -> . TIPO_DATO id operador_igual DATO punto_coma
    (68) LLAMADA -> . id parentesis_abre ARGUMENTOS parentesis_cierra
    (52) ASINGACION -> . id operador_igual DATO punto_coma
    (73) RETURN -> . reservada_return punto_coma
    (74) RETURN -> . reservada_return DATO punto_coma
    (75) BREAK -> . reservada_break punto_coma
    (76) CONTINUE -> . reservada_continue punto_coma
    (53) TIPO_DATO -> . tipo_int
    (54) TIPO_DATO -> . tipo_double
    (55) TIPO_DATO -> . tipo_string
    (56) TIPO_DATO -> . tipo_char
    (57) TIPO_DATO -> . tipo_boolean

    $end            reduce using rule 1 (S0 -> INITIAL .)
    reservada_if    shift and go to state 16
    reservada_do    shift and go to state 17
    reservada_while shift and go to state 18
    reservada_void  shift and go to state 19
    id              shift and go to state 20
    reservada_return shift and go to state 22
    reservada_break shift and go to state 23
    reservada_continue shift and go to state 24
    tipo_int        shift and go to state 25
    tipo_double     shift and go to state 26
    tipo_string     shift and go to state 27
    tipo_char       shift and go to state 28
    tipo_boolean    shift and go to state 29

    ESTRUCTURA                     shift and go to state 30
    PRODIF_ELSE                    shift and go to state 4
    PRODIF                         shift and go to state 5
    PRODDO_WHILE                   shift and go to state 6
    PRODWHILE                      shift and go to state 7
    PRODVOID                       shift and go to state 8
    PRODFUNCION                    shift and go to state 9
    DECLARACION                    shift and go to state 10
    LLAMADA                        shift and go to state 11
    ASINGACION                     shift and go to state 12
    RETURN                         shift and go to state 13
    BREAK                          shift and go to state 14
    CONTINUE                       shift and go to state 15
    TIPO_DATO                      shift and go to state 21

state 3

    (3) INITIAL -> ESTRUCTURA .

    reservada_if    reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    reservada_do    reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    reservada_while reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    reservada_void  reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    id              reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    reservada_return reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    reservada_break reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    reservada_continue reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    tipo_int        reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    tipo_double     reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    tipo_string     reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    tipo_char       reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    tipo_boolean    reduce using rule 3 (INITIAL -> ESTRUCTURA .)
    $end            reduce using rule 3 (INITIAL -> ESTRUCTURA .)


state 4

    (4) ESTRUCTURA -> PRODIF_ELSE .

    reservada_if    reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    reservada_do    reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    reservada_while reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    reservada_void  reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    id              reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    reservada_return reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    reservada_break reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    reservada_continue reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    tipo_int        reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    tipo_double     reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    tipo_string     reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    tipo_char       reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    tipo_boolean    reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)
    $end            reduce using rule 4 (ESTRUCTURA -> PRODIF_ELSE .)


state 5

    (5) ESTRUCTURA -> PRODIF .

    reservada_if    reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    reservada_do    reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    reservada_while reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    reservada_void  reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    id              reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    reservada_return reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    reservada_break reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    reservada_continue reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    tipo_int        reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    tipo_double     reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    tipo_string     reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    tipo_char       reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    tipo_boolean    reduce using rule 5 (ESTRUCTURA -> PRODIF .)
    $end            reduce using rule 5 (ESTRUCTURA -> PRODIF .)


state 6

    (6) ESTRUCTURA -> PRODDO_WHILE .

    reservada_if    reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    reservada_do    reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    reservada_while reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    reservada_void  reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    id              reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    reservada_return reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    reservada_break reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    reservada_continue reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    tipo_int        reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    tipo_double     reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    tipo_string     reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    tipo_char       reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    tipo_boolean    reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)
    $end            reduce using rule 6 (ESTRUCTURA -> PRODDO_WHILE .)


state 7

    (7) ESTRUCTURA -> PRODWHILE .

    reservada_if    reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    reservada_do    reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    reservada_while reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    reservada_void  reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    id              reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    reservada_return reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    reservada_break reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    reservada_continue reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    tipo_int        reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    tipo_double     reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    tipo_string     reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    tipo_char       reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    tipo_boolean    reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)
    $end            reduce using rule 7 (ESTRUCTURA -> PRODWHILE .)


state 8

    (8) ESTRUCTURA -> PRODVOID .

    reservada_if    reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    reservada_do    reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    reservada_while reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    reservada_void  reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    id              reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    reservada_return reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    reservada_break reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    reservada_continue reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    tipo_int        reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    tipo_double     reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    tipo_string     reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    tipo_char       reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    tipo_boolean    reduce using rule 8 (ESTRUCTURA -> PRODVOID .)
    $end            reduce using rule 8 (ESTRUCTURA -> PRODVOID .)


state 9

    (9) ESTRUCTURA -> PRODFUNCION .

    reservada_if    reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    reservada_do    reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    reservada_while reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    reservada_void  reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    id              reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    reservada_return reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    reservada_break reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    reservada_continue reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    tipo_int        reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    tipo_double     reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    tipo_string     reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    tipo_char       reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    tipo_boolean    reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)
    $end            reduce using rule 9 (ESTRUCTURA -> PRODFUNCION .)


state 10

    (10) ESTRUCTURA -> DECLARACION .

    reservada_if    reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    reservada_do    reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    reservada_while reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    reservada_void  reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    id              reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    reservada_return reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    reservada_break reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    reservada_continue reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    tipo_int        reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    tipo_double     reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    tipo_string     reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    tipo_char       reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    tipo_boolean    reduce using rule 10 (ESTRUCTURA -> DECLARACION .)
    $end            reduce using rule 10 (ESTRUCTURA -> DECLARACION .)


state 11

    (11) ESTRUCTURA -> LLAMADA .

    reservada_if    reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    reservada_do    reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    reservada_while reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    reservada_void  reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    id              reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    reservada_return reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    reservada_break reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    reservada_continue reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    tipo_int        reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    tipo_double     reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    tipo_string     reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    tipo_char       reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    tipo_boolean    reduce using rule 11 (ESTRUCTURA -> LLAMADA .)
    $end            reduce using rule 11 (ESTRUCTURA -> LLAMADA .)


state 12

    (12) ESTRUCTURA -> ASINGACION .

    reservada_if    reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    reservada_do    reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    reservada_while reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    reservada_void  reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    id              reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    reservada_return reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    reservada_break reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    reservada_continue reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    tipo_int        reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    tipo_double     reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    tipo_string     reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    tipo_char       reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    tipo_boolean    reduce using rule 12 (ESTRUCTURA -> ASINGACION .)
    $end            reduce using rule 12 (ESTRUCTURA -> ASINGACION .)


state 13

    (13) ESTRUCTURA -> RETURN .

    reservada_if    reduce using rule 13 (ESTRUCTURA -> RETURN .)
    reservada_do    reduce using rule 13 (ESTRUCTURA -> RETURN .)
    reservada_while reduce using rule 13 (ESTRUCTURA -> RETURN .)
    reservada_void  reduce using rule 13 (ESTRUCTURA -> RETURN .)
    id              reduce using rule 13 (ESTRUCTURA -> RETURN .)
    reservada_return reduce using rule 13 (ESTRUCTURA -> RETURN .)
    reservada_break reduce using rule 13 (ESTRUCTURA -> RETURN .)
    reservada_continue reduce using rule 13 (ESTRUCTURA -> RETURN .)
    tipo_int        reduce using rule 13 (ESTRUCTURA -> RETURN .)
    tipo_double     reduce using rule 13 (ESTRUCTURA -> RETURN .)
    tipo_string     reduce using rule 13 (ESTRUCTURA -> RETURN .)
    tipo_char       reduce using rule 13 (ESTRUCTURA -> RETURN .)
    tipo_boolean    reduce using rule 13 (ESTRUCTURA -> RETURN .)
    $end            reduce using rule 13 (ESTRUCTURA -> RETURN .)


state 14

    (14) ESTRUCTURA -> BREAK .

    reservada_if    reduce using rule 14 (ESTRUCTURA -> BREAK .)
    reservada_do    reduce using rule 14 (ESTRUCTURA -> BREAK .)
    reservada_while reduce using rule 14 (ESTRUCTURA -> BREAK .)
    reservada_void  reduce using rule 14 (ESTRUCTURA -> BREAK .)
    id              reduce using rule 14 (ESTRUCTURA -> BREAK .)
    reservada_return reduce using rule 14 (ESTRUCTURA -> BREAK .)
    reservada_break reduce using rule 14 (ESTRUCTURA -> BREAK .)
    reservada_continue reduce using rule 14 (ESTRUCTURA -> BREAK .)
    tipo_int        reduce using rule 14 (ESTRUCTURA -> BREAK .)
    tipo_double     reduce using rule 14 (ESTRUCTURA -> BREAK .)
    tipo_string     reduce using rule 14 (ESTRUCTURA -> BREAK .)
    tipo_char       reduce using rule 14 (ESTRUCTURA -> BREAK .)
    tipo_boolean    reduce using rule 14 (ESTRUCTURA -> BREAK .)
    $end            reduce using rule 14 (ESTRUCTURA -> BREAK .)


state 15

    (15) ESTRUCTURA -> CONTINUE .

    reservada_if    reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    reservada_do    reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    reservada_while reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    reservada_void  reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    id              reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    reservada_return reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    reservada_break reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    reservada_continue reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    tipo_int        reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    tipo_double     reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    tipo_string     reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    tipo_char       reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    tipo_boolean    reduce using rule 15 (ESTRUCTURA -> CONTINUE .)
    $end            reduce using rule 15 (ESTRUCTURA -> CONTINUE .)


state 16

    (18) PRODIF_ELSE -> reservada_if . OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO reservada_else INSTRUCCIONES_FACTORIZADO
    (19) PRODIF -> reservada_if . OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (77) OPERACION_FACTORIZADO -> . parentesis_abre OPERACIONES parentesis_cierra

    parentesis_abre shift and go to state 32

    OPERACION_FACTORIZADO          shift and go to state 31

state 17

    (16) PRODDO_WHILE -> reservada_do . INSTRUCCIONES_FACTORIZADO reservada_while OPERACION_FACTORIZADO punto_coma
    (78) INSTRUCCIONES_FACTORIZADO -> . llave_abre INSTRUCCIONES llave_cierra

    llave_abre      shift and go to state 34

    INSTRUCCIONES_FACTORIZADO      shift and go to state 33

state 18

    (17) PRODWHILE -> reservada_while . OPERACION_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (77) OPERACION_FACTORIZADO -> . parentesis_abre OPERACIONES parentesis_cierra

    parentesis_abre shift and go to state 32

    OPERACION_FACTORIZADO          shift and go to state 35

state 19

    (20) PRODVOID -> reservada_void . id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO

    id              shift and go to state 36


state 20

    (68) LLAMADA -> id . parentesis_abre ARGUMENTOS parentesis_cierra
    (52) ASINGACION -> id . operador_igual DATO punto_coma

    parentesis_abre shift and go to state 37
    operador_igual  shift and go to state 38


state 21

    (21) PRODFUNCION -> TIPO_DATO . id PARAMETROS_FACTORIZADO INSTRUCCIONES_FACTORIZADO
    (51) DECLARACION -> TIPO_DATO . id operador_igual DATO punto_coma

    id              shift and go to state 39


state 22

    (73) RETURN -> reservada_return . punto_coma
    (74) RETURN -> reservada_return . DATO punto_coma
    (58) DATO -> . numero
    (59) DATO -> . dato_double
    (60) DATO -> . dato_string
    (61) DATO -> . dato_char
    (62) DATO -> . dato_boolean_true
    (63) DATO -> . dato_boolean_false

    punto_coma      shift and go to state 40
    numero          shift and go to state 42
    dato_double     shift and go to state 43
    dato_string     shift and go to state 44
    dato_char       shift and go to state 45
    dato_boolean_true shift and go to state 46
    dato_boolean_false shift and go to state 47

    DATO                           shift and go to state 41

state 23

    (75) BREAK -> reservada_break . punto_coma

    punto_coma      shift and go to state 48


state 24
